# FAST_MCP_PROD

./: README.md  test_database.py  test_mcp.py
fastmcp/: .env  Makefile  README.md  main.py  pyproject.toml
fastmcp/api/: deps.py  routes_catalog.py  routes_internal.py  routes_manifests.py  routes_tools.py  utils.py
fastmcp/core/: config.py  rate_limit.py  rbac.py  security.py  token_broker.py
fastmcp/db/: schemas.sqlmodel  schemas_sqlmodel.py  session.py
fastmcp/models/: audit.py  tool_manifest.py  user_agent.py
fastmcp/policies/: policies.yml
fastmcp/providers/: ads_provider.py  base.py  database_provider.py  filesystem_provider.py  mcp_provider.py  pipedrive_provider.py
fastmcp/tests/: conftest.py  test_confirmation_flow.py  test_happy_path.py  test_idempotency.py  test_policy_denial.py
fastmcp/utils/: audit_logger.py  openapi_ingestor.py
